--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "files.autoGuessEncoding": true,
     "editor.unicodeHighlight.ambiguousCharacters": true,
     "scm.defaultViewSortKey": "path",
-    "explorer.sortOrder": "type"
+    "explorer.sortOrder": "type",
+    "files.associations": {
+        "clt_defs.h": "c"
+    }
 }
